--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@ section {
 				<a href="https://www.youtube.com/watch?v=YgDx3x98qnM"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BMmMwYzZjMzAtN2I3Ny00MTdhLTg1Y2YtNDZiMzhhODY3ZjJjXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""></a>
 				<a href="https://www.youtube.com/watch?v=XhhEXK3NkzU" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BZWJlZTM2OWYtYTkxZC00OTQyLThjOWEtN2VkOGE1MTFmNGQxXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""></a>
 				<a href="https://sadewoo.tumblr.com/post/732936987201404928/post-animation-little-goody-two-shoes-trailer" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BZjkwNDkwMzEtZDZhZC00MGI1LTk0YmUtMzE0NWUzZjdlYjM1XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""></a>
-				<a href="https://www.youtube.com/watch?v=akaQ1tarUQo&list=PLdk56EjsMhfjwymlCUUltcL63fZDmyZvZ&index=8&pp=gAQBiAQB" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BOTU2MmNmYmUtYTViNS00Y2I5LTliYzUtMjBiOTFiOTdkYTg0XkEyXkFqcGc@._V1_UX67_CR0,0,67,98_AL_.jpg" alt=""></a>
-				<a href="" target="_blank"><img class="poster" src="https://images.igdb.com/igdb/image/upload/t_cover_big/co30qj.jpg" alt=""></a>
+				<a href="https://www.youtube.com/watch?v=akaQ1tarUQo" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BOTU2MmNmYmUtYTViNS00Y2I5LTliYzUtMjBiOTFiOTdkYTg0XkEyXkFqcGc@._V1_UX67_CR0,0,67,98_AL_.jpg" alt=""></a>
+				<a href="https://www.youtube.com/watch?v=YQXp2gEoevs" target="_blank"><img class="poster" src="https://images.igdb.com/igdb/image/upload/t_cover_big/co30qj.jpg" alt=""></a>
 				
 				
 			</div>
