--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@ iframe{border-width: 0;}
 
 <div id="Contact" class="tabcontent">
   <br>
-  <a target="_blank" href="mailto:sade.animation@gmail.com"><img class="sns" src="https://img.icons8.com/?size=50&id=12580&format=png"></a>
-</div>
+  <div class="yy"><a target="_blank" href="mailto:sade.animation@gmail.com">「EMAIL ME」</a></div>
+ </div>
 <script>
 function openCity(evt, cityName) {
   var i, tabcontent, tablinks;
