--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ iframe{border-width: 0;}
 <div class="tab">
   <button class="tablinks" onclick="openCity(event, 'Home')" id="defaultOpen">Animation</button>
   <button class="tablinks" onclick="openCity(event, 'Artwork')">Artwork</button>
-  <button class="tablinks" onclick="openCity(event, 'SNS')">SNS</button>
+  <button class="tablinks" onclick="openCity(event, 'Links')">Links</button>
   <button class="tablinks" onclick="openCity(event, 'Contact')">Contact</button>
   
 </div>
@@ -217,7 +217,7 @@ iframe{border-width: 0;}
  </div>
 </div>
 
-<div id="SNS" class="tabcontent">
+<div id="Links" class="tabcontent">
   <br>
   <a target="_blank" href="https://www.youtube.com/sadewoo0"><img class="sns" src="https://blinkies.cafe/b/display/0203-youtubelogo.gif"></a>
   <a target="_blank" href="https://sadewoo.newgrounds.com/"><img class="sns" src="https://blinkies.cafe/b/blinkiesCafe-9N.gif"></a>
