--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ iframe{border-width: 0;}
 
 <div id="Contact" class="tabcontent">
   <br>
-  <div class="yy"><a target="_blank" href="mailto:sade.animation@gmail.com">「EMAIL ME」</a></div>
+  <div class="yy"><a target="_blank" href="mailto:sade.animation@gmail.com">「EMAIL ME!」</a></div>
  </div>
 <script>
 function openCity(evt, cityName) {
