--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 .yy{font-family: Raglan;color:rgb(174, 0, 0);font-size: 36pt;line-height: 1;}
 a{all:unset;color:orange}
 a:hover{color:yellow;cursor:pointer;}
- 
+ul {
+    list-style-type: none;
+}
 body{
   padding-top: 5%;
   padding-bottom: 5%;
