--- a/index.html
+++ b/index.html
@@ -247,7 +247,9 @@ iframe{border-width: 0;}
 <div id="Contact" class="tabcontent">
   <br>
   <div class="yy"><a target="_blank" href="mailto:sade.animation@gmail.com">「EMAIL ME!」</a></div>
- </div>
+  <img width="200px" src="assets/drawings/salam_tai.png">
+</div>
+
 <script>
 function openCity(evt, cityName) {
   var i, tabcontent, tablinks;
