--- a/index.html
+++ b/index.html
@@ -221,13 +221,13 @@ iframe{border-width: 0;}
 
 <div id="Links" class="tabcontent">
   <br>
-  <a target="_blank" href="https://www.youtube.com/sadewoo0"><img class="sns" src="https://blinkies.cafe/b/display/0203-youtubelogo.gif"></a>
-  <a target="_blank" href="https://sadewoo.newgrounds.com/"><img class="sns" src="https://blinkies.cafe/b/blinkiesCafe-9N.gif"></a>
-  <a target="_blank" href="https://bsky.app/profile/spikysaurus.bsky.social"><img class="sns" src="https://blinkies.cafe/b/blinkiesCafe-8v.gif"></a>
-  <a target="_blank" href="https://www.instagram.com/sadewoo0"><img class="sns" src="https://blinkies.cafe/b/display/0199-instagramlogo.gif"/></a>
-  <a target="_blank" href="https://www.tumblr.com/sadewoo"><img class="sns" src="https://blinkies.cafe/b/display/0200-tumblrlogo.gif"></a>
-  <a target="_blank" href="https://www.linkedin.com/in/sadewa-dika-sadewoo-b1722a11b/"><img class="sns" src="https://blinkies.cafe/b/blinkiesCafe-gG.gif"></a>
-  <a target="_blank" href="https://sadewoo.gumroad.com/"><img class="sns" src="https://blinkies.cafe/b/blinkiesCafe-Pl.gif"></a>
+  <a target="_blank" href="https://www.youtube.com/sadewoo0"><img class="sns" src="assets/blinkies/youtube.gif"></a>
+  <a target="_blank" href="https://sadewoo.newgrounds.com/"><img class="sns" src="assets/blinkies/newgrounds.gif"></a>
+  <a target="_blank" href="https://bsky.app/profile/spikysaurus.bsky.social"><img class="sns" src="assets/blinkies/bluesky.gif"></a>
+  <a target="_blank" href="https://www.instagram.com/sadewoo0"><img class="sns" src="assets/blinkies/instagram.gif"/></a>
+  <a target="_blank" href="https://www.tumblr.com/sadewoo"><img class="sns" src="assets/blinkies/tumblr.gif"></a>
+  <a target="_blank" href="https://www.linkedin.com/in/sadewa-dika-sadewoo-b1722a11b/"><img class="sns" src="assets/blinkies/linkedin.gif"></a>
+  <a target="_blank" href="https://sadewoo.gumroad.com/"><img class="sns" src="assets/blinkies/gumroad.gif"></a>
   <br>
   <a href="https://spikysaurus.github.io/works/pages/sakugagp/manual.html"><img width="500px" src="https://public-files.gumroad.com/lfl5qk6a02wj1crsnkkqvwv32d5l"></a>
   <div class="yy"><a target="_blank" href="mailto:sade.animation@gmail.com">ARTICLES ARCHIVE</a></div>
