--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ iframe{border-width: 0;}
 <div id="Home" class="tabcontent">
   <div class="yy">SADEWOO's</div>
   <div class="xx">ANIMATION WORKS</div>
-  <div class="yy"><a href="https://www.youtube.com/embed/videoseries?si=wasjbgMcgpvEuvTI&amp;list=PLdk56EjsMhfjwymlCUUltcL63fZDmyZvZ">「WATCH REEL」</a></div>
+  <div class="yy"><a href="https://www.youtube.com/watch?v=Bi_s_g2l1Yk&list=PLdk56EjsMhfjwymlCUUltcL63fZDmyZvZ">「WATCH REEL」</a></div>
     <div class="card">
      
       <p style="color:#4a89c3;">COMMERCIAL WORKS : CARTOON - ANIME - VIDEO GAME PV/CUTSCENES</p>
