--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ iframe{border-width: 0;}
   <a target="_blank" href="https://sadewoo.gumroad.com/"><img class="sns" src="assets/blinkies/gumroad.gif"></a>
   <br>
   <a href="https://spikysaurus.github.io/works/pages/sakugagp/manual.html"><img width="500px" src="https://public-files.gumroad.com/lfl5qk6a02wj1crsnkkqvwv32d5l"></a>
-  <div class="yy"><a target="_blank" href="mailto:sade.animation@gmail.com">ARTICLES ARCHIVE</a></div>
+  <div class="yy"><a>ARTICLES ARCHIVE</a></div>
   <p style="color:#4a89c3;">COLLECTION OF ARTICLES I'M MENTIONED IN!</p>
   <ul>
     
@@ -247,7 +247,7 @@ iframe{border-width: 0;}
 <div id="Contact" class="tabcontent">
   <br>
   <div class="yy"><a target="_blank" href="mailto:sade.animation@gmail.com">「EMAIL ME!」</a></div>
-  <p style="color:#4a89c3;">ART/ANIMATION COMMISSIONS? WORK AVAILABILITY? TALK ABOUT THE WEBSITE? OR JUST TO SAY HI? ASK ME ANYTHING!</p>
+  <p style="color:#4a89c3;">ART/ANIMATION COMMISSIONS? WORK AVAILABILITY? TALK ABOUT THE WEBSITE? <br> OR JUST TO SAY HI? ASK ME ANYTHING!</p>
   <img width="200px" src="assets/drawings/salam_tai.png">
 </div>
 
