--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ iframe{border-width: 0;}
 <div id="Artwork" class="tabcontent">
   <div class="yy">SADEWOO's</div>
   <div class="xx">ARTWORKS</div>
-  <p style="color:#4a89c3;">FANART/ORIGINAL CHARACTER DESIGNS</p>
+  <p style="color:#4a89c3;">FANART</p>
   <div class="gallery">
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreifrscyzemiirjaj4uxf2g6cvcxt4y52mzqfzwjpfzbzbltjovgsie@jpeg" />
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreifp6leljj5xru3bq6bmy27bmvols4ziz7gxgua452gawxge377wra@jpeg">
@@ -207,17 +207,28 @@ iframe{border-width: 0;}
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreiclojwo47mmb2h72hbpzzcsp7razsbyqamogihr4aru5jemkpo6xy@jpeg">
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreigpjgzu6ccmlinr4i7gx44o63riuntpp7cwipjarsemfdhvlrzsma@jpeg">
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreiegizsdhcvrppijdzfdwgpqidmlo3nuethazxcurortlmcstgpqea@jpeg">
-    <img src="https://spikysaurus.github.io/works/assets/drawings/reinz.png">
+    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreiehmna4wp5agodmtm7clo5nbkgnyv23rlklesg7k3k2uap74lgwre@jpeg">
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreih72acdn6akin24y46irpvnttjnndijr3whm6g4xenpdwmsvtvn3u@jpeg">
-    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreifsjyoha6nic6h3iof337gfthkfuzpcvlvj3f26qoqnax7xkb2c6u@jpeg">
-    <img src="https://spikysaurus.github.io/works/assets/drawings/ga_2.png">
-    <img src="https://spikysaurus.github.io/works/assets/drawings/ga_3.png">
-    <img src="https://spikysaurus.github.io/works/assets/drawings/ga.webp">
-    <img src="https://spikysaurus.github.io/works/assets/drawings/pupududu.png">
-    <img src="https://spikysaurus.github.io/works/assets/drawings/MLAATR_Characters_01.png">
-    <img src="https://spikysaurus.github.io/works/assets/drawings/MLAATR_Characters_02.png">
  </div>
+ <p style="color:#4a89c3;">ORIGINAL CHARACTERS</p>
+    <div class="gallery">
+      <img src="assets/drawings/pupududu.png">
+      <img src="assets/drawings/pupududugattling.png">
+      <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreicshxd7ykzvwofpaiqcirmvrnjuk67w2ggjveikayg2pggyv5zqom@jpeg">
+      <img src="assets/drawings/ga_3.png">
+      <img src="assets/drawings/ga_2.png">
+      <img src="assets/drawings/ga.webp">
+      <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreifsjyoha6nic6h3iof337gfthkfuzpcvlvj3f26qoqnax7xkb2c6u@jpeg">
+      <img src="assets/drawings/reinz.png">
+    </div>
+  <p style="color:#4a89c3;">CONCEPT & DESIGNS FOR <a target="_blank" href="https://www.youtube.com/playlist?list=PLdk56EjsMhfj6a9J9RT5HNcWPZWDDycAR" >MLAATR COLLAB</a></p>
+    <div class="gallery">
+      <img src="assets/drawings/MLAATR_Characters_01.png">
+      <img src="assets/drawings/MLAATR_Characters_02.png">
+      <img src="assets/drawings/XD999.png">
+    </div>
 </div>
+
 
 <div id="Links" class="tabcontent">
   <br>
