--- a/index.html
+++ b/index.html
@@ -209,6 +209,8 @@ iframe{border-width: 0;}
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreiegizsdhcvrppijdzfdwgpqidmlo3nuethazxcurortlmcstgpqea@jpeg">
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreiehmna4wp5agodmtm7clo5nbkgnyv23rlklesg7k3k2uap74lgwre@jpeg">
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreih72acdn6akin24y46irpvnttjnndijr3whm6g4xenpdwmsvtvn3u@jpeg">
+    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreiansplxddfoxnykrxagrvk3m6ipzu2okzpnzkocmnidzzgrzv37eu@jpeg">
+    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreie6zq67tihespon43cheixhkjxmloybrbbqcivioeb7uu2mshfnnm@jpeg">
  </div>
  <p style="color:#4a89c3;">ORIGINAL CHARACTERS</p>
     <div class="gallery">
