--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@ iframe{border-width: 0;}
   <div class="xx">ARTWORKS</div>
   <p style="color:#4a89c3;">FANART</p>
   <div class="gallery">
+    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreid5ap7jy5kii5e4xpayyik4bhabfd6inkojp4itqtbicu4nukaspq@jpeg">
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreifrscyzemiirjaj4uxf2g6cvcxt4y52mzqfzwjpfzbzbltjovgsie@jpeg" />
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreifp6leljj5xru3bq6bmy27bmvols4ziz7gxgua452gawxge377wra@jpeg">
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreibvlcwqzauvlyqzfvjps245gy7lhg2pr23xcscurcydjizswhvsfy@jpeg">
@@ -211,7 +212,9 @@ iframe{border-width: 0;}
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreih72acdn6akin24y46irpvnttjnndijr3whm6g4xenpdwmsvtvn3u@jpeg">
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreiansplxddfoxnykrxagrvk3m6ipzu2okzpnzkocmnidzzgrzv37eu@jpeg">
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreie6zq67tihespon43cheixhkjxmloybrbbqcivioeb7uu2mshfnnm@jpeg">
- </div>
+    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreickuagiccnxqkrobyhl7agkswz7layw7qwimm3e5j5vigkphzukgm@jpeg">
+    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreigciwhblzmhtlm4xjbac4n43kzib6lugewui3pxdxqvc7lttvrjz4@jpeg">
+  </div>
  <p style="color:#4a89c3;">ORIGINAL CHARACTERS</p>
     <div class="gallery">
       <img src="assets/drawings/pupududu.png">
