--- a/index.html
+++ b/index.html
@@ -199,17 +199,8 @@ iframe{border-width: 0;}
   <div class="xx">ARTWORKS</div>
   <p style="color:#4a89c3;">FANART</p>
   <div class="gallery">
-    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreid5ap7jy5kii5e4xpayyik4bhabfd6inkojp4itqtbicu4nukaspq@jpeg">
-    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreifrscyzemiirjaj4uxf2g6cvcxt4y52mzqfzwjpfzbzbltjovgsie@jpeg" />
-    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreifp6leljj5xru3bq6bmy27bmvols4ziz7gxgua452gawxge377wra@jpeg">
-    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreibvlcwqzauvlyqzfvjps245gy7lhg2pr23xcscurcydjizswhvsfy@jpeg">
-    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreidszxxutr4s7b7pfrtqzdrfjiquej4dxwh7ha5ln66bmkiw62s6pm@jpeg">
-    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreiedfpgbeots6fnpg26357zmyya2lwafarkjzgttpyt7vlin3q7da4@jpeg">
-    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreiclojwo47mmb2h72hbpzzcsp7razsbyqamogihr4aru5jemkpo6xy@jpeg">
-    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreigpjgzu6ccmlinr4i7gx44o63riuntpp7cwipjarsemfdhvlrzsma@jpeg">
-    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreiegizsdhcvrppijdzfdwgpqidmlo3nuethazxcurortlmcstgpqea@jpeg">
+    <img src="assets/drawings/RC01.png">
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreiehmna4wp5agodmtm7clo5nbkgnyv23rlklesg7k3k2uap74lgwre@jpeg">
-    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreih72acdn6akin24y46irpvnttjnndijr3whm6g4xenpdwmsvtvn3u@jpeg">
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreiansplxddfoxnykrxagrvk3m6ipzu2okzpnzkocmnidzzgrzv37eu@jpeg">
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreie6zq67tihespon43cheixhkjxmloybrbbqcivioeb7uu2mshfnnm@jpeg">
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreickuagiccnxqkrobyhl7agkswz7layw7qwimm3e5j5vigkphzukgm@jpeg">
