--- a/index.html
+++ b/index.html
@@ -209,7 +209,8 @@ iframe{border-width: 0;}
       <img src="assets/drawings/ga_2.png">
       <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreih7vj6pkdjwk5rucjpqjx5r3mimskek5kz3tbuyxu3smidejhvh3m@jpeg">
       <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreid3daz2yzspnki75duubdofhrxt2hv6ssh2wp2p55moq2qdt7vbwq@jpeg">
-      <img src="assets/drawings/reinz.png">
+      <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreie5exbl2x37jclpnqlalxvuy7m634i5h5m7j5h2ykqgc3b6bzltzq@jpeg">
+<img src="assets/drawings/reinz.png">
     </div>
   <p style="color:#4a89c3;">CONCEPT & DESIGNS FOR <a target="_blank" href="https://www.youtube.com/playlist?list=PLdk56EjsMhfj6a9J9RT5HNcWPZWDDycAR" >MLAATR COLLAB</a></p>
     <div class="gallery">
