--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@ iframe{border-width: 0;}
   <div class="xx">DRAWINGS</div> -->
   <p style="color:#4a89c3;">FANART</p>
   <div class="gallery">
+    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreigaqy55air7cnp6hhxkx26xemt2zd44y2sebidf5ujvsptkv53vfy@jpeg">
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreifrclnjpygpwlyvsc4spq6t3467ck53nowp6h3lijnj3psju6wg7u@jpeg">
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreigvcvynddu5bkpv5dnvx5ance4b76bdtmsfjgrdr5fe2vyjpw6vj4@jpeg">
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreifs527rmhggruooftizeaavdwmtvgmke22qtj2sndbkdlelsfzv4q@jpeg">
