--- a/index.html
+++ b/index.html
@@ -248,6 +248,8 @@ iframe{border-width: 0;}
   <p style="color:#4a89c3;">FANART</p>
   <div class="gallery">
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreibzonbv4psias2jvevcu7cr4g43755bfvaecaiy25wkvwbbll6lge@jpeg">
+    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreiazfkynibko3gwmsftcikkfezviw5xp3rjztb6pmlhatdhzcctqza@jpeg">
+    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreibfts6ymkwemybuqacm7j4eyf45eks3wqin4vv3epou4djqo32tfe@jpeg">
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreifrclnjpygpwlyvsc4spq6t3467ck53nowp6h3lijnj3psju6wg7u@jpeg">
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreigvcvynddu5bkpv5dnvx5ance4b76bdtmsfjgrdr5fe2vyjpw6vj4@jpeg">
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreifs527rmhggruooftizeaavdwmtvgmke22qtj2sndbkdlelsfzv4q@jpeg">
