--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@ iframe{border-width: 0;}
   <div class="xx">DRAWINGS</div> -->
   <p style="color:#4a89c3;">FANART</p>
   <div class="gallery">
+    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreigcexyiom6woscxypk2xkabjeog6dbbtmbps5autinsggmffni2we@jpeg">
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreibzonbv4psias2jvevcu7cr4g43755bfvaecaiy25wkvwbbll6lge@jpeg">
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreiazfkynibko3gwmsftcikkfezviw5xp3rjztb6pmlhatdhzcctqza@jpeg">
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreibshrzppjg3spuqsxbh7wd6lssv7fciihqcee2mxhfk2nq5sg4le4@jpeg">
@@ -266,6 +267,7 @@ iframe{border-width: 0;}
  <p style="color:#4a89c3;">CHARACTER DESIGNS</p>
     <div class="gallery">
       <img src="assets/drawings/reinz.png">
+      <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreicvlz7txzno5zrgfguamb2orhbjnndkfu34dws2utmfgbo2z6dvzi@jpeg">
       <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreiextmxgozaxvrqau5qhxbohuxjyktrke7bj3hvjqmh4av4i5sw4d4@jpeg">
       <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreial4dijjtmftawygnelbjaqenqrppz7t4c7s3znpjxfvg7ecp7ubm@jpeg">
       
