--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta property="og:image" content="assets/preview.png" />
   <link rel="stylesheet" href="assets/css/gallery.css">
   <script src="assets/js/gallery.js"></script>
 
@@ -255,7 +256,7 @@ iframe{border-width: 0;}
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreigvcvynddu5bkpv5dnvx5ance4b76bdtmsfjgrdr5fe2vyjpw6vj4@jpeg">
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreifs527rmhggruooftizeaavdwmtvgmke22qtj2sndbkdlelsfzv4q@jpeg">
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreib3eil4hqbyc7jkf42lw2ovbqmkde3fszcbrhun6sbh3xnlk6jubi@jpeg">
-    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreibyiknes2zlrjyqvoiax4nuu4tnnvz7rjmnebzwwksfxwydghpoea@jpeg">
+    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreihtsr5honh3ocax2twrsz2atpzt6l57s4ppbdfp4s6h6ntw26vkym@jpeg">
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreidtuid3mayzy4k6nuaehsbkfu7q66lb6hbrbo3ery74k2yylkmj4e@jpeg">
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreidomix6gsfmyomgnbazugbfwhzfxtvu6i7m4iuyaoiudtgu2v46uq@jpeg">
     <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreiehmna4wp5agodmtm7clo5nbkgnyv23rlklesg7k3k2uap74lgwre@jpeg">
