--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta property="og:image" content="assets/preview.png" />
+  <meta property="og:title" content="Sadewoo the animator"/>
+  <meta property="og:image" content="assets/preview.png"/>
+  <meta property="og:description" content="I'm Sade! 2D Animator previously worked on Anime,Cartoons and Game PVs "/>
+  <meta property="og:url" content="https://www.spikysaurus.github.io"/>
+  <meta property="og:image:width" content="1920" />
+  <meta property="og:image:height" content="1080"/>
+  <meta property="og:type" content="website"/> 
   <link rel="stylesheet" href="assets/css/gallery.css">
   <script src="assets/js/gallery.js"></script>
 
