--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta property="og:title" content="Sadewoo the animator"/>
-  <meta property="og:image" content="assets/preview.png"/>
+  <meta property="og:image" content="https://spikysaurus.github.io/assets/preview.png"/>
   <meta property="og:description" content="I'm Sade! 2D Animator previously worked on Anime,Cartoons and Game PVs "/>
   <meta property="og:url" content="https://www.spikysaurus.github.io"/>
   <meta property="og:image:width" content="1920" />
