--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -58,7 +58,7 @@
       <img src="../assets/drawings/crew.gif">
       <img src="../assets/drawings/iyaiya.gif">
       <img src="../assets/drawings/iyaiya2.gif">
-      <img src="../assets/drawings/kofi.gif">
+<!--       <img src="../assets/drawings/kofi.gif"> -->
       <img src="../assets/drawings/VSxCV_Sade.gif">
     </div>
 </div>
