--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -9,61 +9,45 @@
 </head>
 
 <body>
-  <div class="tab">
-  <a href="../index.html"><button>BACK TO HOME</button></a>
-  </div>
-
-  <p style="color:#4a89c3;">FANART</p>
-  <div class="gallery">
-    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreibwhlwyfvdhfbvm4tca35giummfmp6hofosjs2nt2j6z42sb6yf3u@jpeg">
-    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreigcexyiom6woscxypk2xkabjeog6dbbtmbps5autinsggmffni2we@jpeg">
-    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreibzonbv4psias2jvevcu7cr4g43755bfvaecaiy25wkvwbbll6lge@jpeg">
-    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreiazfkynibko3gwmsftcikkfezviw5xp3rjztb6pmlhatdhzcctqza@jpeg">
-    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreibshrzppjg3spuqsxbh7wd6lssv7fciihqcee2mxhfk2nq5sg4le4@jpeg">
-    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreifrclnjpygpwlyvsc4spq6t3467ck53nowp6h3lijnj3psju6wg7u@jpeg">
-    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreigvcvynddu5bkpv5dnvx5ance4b76bdtmsfjgrdr5fe2vyjpw6vj4@jpeg">
-    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreifs527rmhggruooftizeaavdwmtvgmke22qtj2sndbkdlelsfzv4q@jpeg">
-    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreib3eil4hqbyc7jkf42lw2ovbqmkde3fszcbrhun6sbh3xnlk6jubi@jpeg">
-    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreihtsr5honh3ocax2twrsz2atpzt6l57s4ppbdfp4s6h6ntw26vkym@jpeg">
-    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreidtuid3mayzy4k6nuaehsbkfu7q66lb6hbrbo3ery74k2yylkmj4e@jpeg">
-    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreidomix6gsfmyomgnbazugbfwhzfxtvu6i7m4iuyaoiudtgu2v46uq@jpeg">
-    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreiehmna4wp5agodmtm7clo5nbkgnyv23rlklesg7k3k2uap74lgwre@jpeg">
-    <img src="https://cdn.bsky.app/img/feed_thumbnail/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreid7kuwsc4cfuuqdvjwb4lvorje2ttlosfytur7idlmmoai4jy6i5u@jpeg">
-    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreiaxnudcflcpc4ugxhhmpiy4avtryco67zrwwr3lokvud5vga5vwj4@jpeg">
-    <img src="https://cdn.bsky.app/img/feed_thumbnail/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreifalckvox4cgwlazfjz53trdwjso4iwh3cv2xdvnb5c2bevrnecha@jpeg">
-    <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreiflk4c6zknqggpvazdznxa7d2jjs5vyvep36mhc4umsaw5mw4oqzq@jpeg">
-  </div>
- <p style="color:#4a89c3;">CHARACTER DESIGNS</p>
-    <div class="gallery">
-      <img src="../assets/drawings/reinz.png">
-      <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreicvlz7txzno5zrgfguamb2orhbjnndkfu34dws2utmfgbo2z6dvzi@jpeg">
-      <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreiextmxgozaxvrqau5qhxbohuxjyktrke7bj3hvjqmh4av4i5sw4d4@jpeg">
-      <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreial4dijjtmftawygnelbjaqenqrppz7t4c7s3znpjxfvg7ecp7ubm@jpeg">
-      
-      <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreiaox2ymhnmlejeolmccrvzw2u5hivrjopkg3mu4vairalmunwgyri@jpeg">
-      <img src="https://cdn.bsky.app/img/feed_thumbnail/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreie5exbl2x37jclpnqlalxvuy7m634i5h5m7j5h2ykqgc3b6bzltzq@jpeg">
-      <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreih7vj6pkdjwk5rucjpqjx5r3mimskek5kz3tbuyxu3smidejhvh3m@jpeg">
-      <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreid3daz2yzspnki75duubdofhrxt2hv6ssh2wp2p55moq2qdt7vbwq@jpeg">
-      <img src="../assets/drawings/MLAATR_Characters_01.png">
-      <img src="../assets/drawings/MLAATR_Characters_02.png">
-      <img src="../assets/drawings/pupududu.png">
-      <img src="../assets/drawings/XD999.png">
-      <img src="https://cdn.bsky.app/img/feed_thumbnail/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreie5tgeyls6vjhr2td7rfsnzhh7pabyyeaq6zfyphy4qvaxj3ccady@jpeg">
-    </div>
-    <p style="color:#4a89c3;"> GIF LOOPS </a></p>
-    <div class="gallery">
-      <img src="../assets/drawings/Matatabi.gif">
-      <img src="../assets/drawings/Matatabi2.gif">
-      <img src="../assets/drawings/walk.gif">
-      <img src="../assets/drawings/crew.gif">
-      <img src="../assets/drawings/iyaiya.gif">
-      <img src="../assets/drawings/iyaiya2.gif">
-<!--       <img src="../assets/drawings/kofi.gif"> -->
-      <img src="../assets/drawings/VSxCV_Sade.gif">
-    </div>
+<div class="tab">
+  <a href="../index.html"><button>BACK TO HOME</button></a><br><br>
+  <button style="background-color:orange;" class="tablinks" onclick="openCity(event, 'FanArt')" id="defaultOpen">Fan Art</button>
+  <button style="background-color:pink;" class="tablinks" onclick="openCity(event, 'OriginalCharacters')" id="defaultOpen">Original Characters</button>
+  <button style="background-color:cyan;" class="tablinks" onclick="openCity(event, 'GIFs')" id="defaultOpen">GIFs</button>
 </div>
 
 
+<div id="FanArt" class="tabcontent">
+<div id="display-images" class="gallery"></div>
+</div>
+
+<div id="OriginalCharacters" class="tabcontent">
+<div id="display-imagesB" class="gallery"></div>
+</div>
+
+<div id="GIFs" class="tabcontent">
+<div id="display-imagesC" class="gallery"></div>
+</div>
+
+<script>
+function openCity(evt, cityName) {
+  var i, tabcontent, tablinks;
+  tabcontent = document.getElementsByClassName("tabcontent");
+  for (i = 0; i < tabcontent.length; i++) {
+    tabcontent[i].style.display = "none";
+  }
+  tablinks = document.getElementsByClassName("tablinks");
+  for (i = 0; i < tablinks.length; i++) {
+    tablinks[i].className = tablinks[i].className.replace(" active", "");
+  }
+  document.getElementById(cityName).style.display = "block";
+  evt.currentTarget.className += " active";
+}
+
+// Get the element with id="defaultOpen" and click on it
+document.getElementById("defaultOpen").click();
+</script>
 
 </body>
+
 </html> 
