--- a/pages/preview.html
+++ b/pages/preview.html
@@ -1,5 +1,6 @@
  <html>
  <head>
+ <meta property="og:image" content="">
  </head>
  <body>
 
@@ -13,7 +14,7 @@ const imageUrl = name;
 var img = document.getElementById("myImg")
 img.src = imageUrl;
 
-document.querySelector('meta[name="image"]').setAttribute("content", imageUrl);
+document.querySelectorAll('meta[property=og\\:image]')[0].setAttribute('content', imageUrl)
 
 </script>
 <style>
