--- a/pages/preview.html
+++ b/pages/preview.html
@@ -1,6 +1,13 @@
  <html>
  <head>
- <meta property="og:image" content="">
+ <meta charset="UTF-8">
+  <meta property="og:title" content="Spikysaurus Art"/>
+  <meta property="og:image" content=""/>
+  <meta property="og:description" content=""/>
+  <meta property="og:url" content="https://www.spikysaurus.github.io"/>
+  <meta property="og:image:width" content="1024" />
+  <meta property="og:image:height" content=""/>
+  <meta property="og:type" content="website"/>
  </head>
  <body>
 
@@ -8,9 +15,9 @@ Art by Sadewoo/Spikysaurus , visit my website for more <a href="https://spikysau
 <img id="myImg"></img>
 
 <script>
-let params = new URL(document.location.toString()).searchParams;
-let name = params.get("img");
-const imageUrl = name;
+let imgParams = new URL(document.location.toString()).searchParams;
+let imgName = imgParams.get("img");
+const imageUrl = imgName;
 var img = document.getElementById("myImg")
 img.src = imageUrl;
 
