--- a/pages/preview.html
+++ b/pages/preview.html
@@ -5,7 +5,7 @@
   <meta property="og:image" content=""/>
   <meta property="og:description" content=""/>
   <meta property="og:url" content="https://www.spikysaurus.github.io"/>
-  <meta property="og:image:width" content="1024" />
+  <meta property="og:image:width" content="" />
   <meta property="og:image:height" content=""/>
   <meta property="og:type" content="website"/>
  </head>
@@ -15,6 +15,7 @@ Art by Sadewoo/Spikysaurus , visit my website for more <a href="https://spikysau
 <img id="myImg"></img>
 
 <script>
+
 let imgParams = new URL(document.location.toString()).searchParams;
 let imgName = imgParams.get("img");
 const imageUrl = imgName;
@@ -22,7 +23,8 @@ var img = document.getElementById("myImg")
 img.src = imageUrl;
 
 document.querySelectorAll('meta[property=og\\:image]')[0].setAttribute('content', imageUrl)
-
+document.querySelectorAll('meta[property=og\\:image\\:width]')[0].setAttribute('content', img.clientWidth)
+document.querySelectorAll('meta[property=og\\:image\\:height]')[0].setAttribute('content', img.clientHeight)
 </script>
 <style>
 #myImg{width:1024px;}
