--- a/pages/preview.html
+++ b/pages/preview.html
@@ -3,7 +3,7 @@
  <meta charset="UTF-8">
   <meta property="og:title" content="Spikysaurus Art"/>
   <meta property="og:image" content=""/>
-  <meta property="og:description" content=""/>
+  <meta property="og:description" content="Art by Sadewoo/Spikysaurus , visit my website for more https://spikysaurus.github.io/pages/gallery.html"/>
   <meta property="og:url" content="https://www.spikysaurus.github.io"/>
   <meta property="og:image:width" content="" />
   <meta property="og:image:height" content=""/>
