--- a/pages/preview.html
+++ b/pages/preview.html
@@ -1,48 +1,59 @@
  <html>
  <head>
- <meta charset="UTF-8">
-  <meta property="og:title" content="Spikysaurus Art"/>
   <meta property="og:image" content=""/>
-  <meta property="og:description" content="Art by Sadewoo/Spikysaurus , visit my website for more https://spikysaurus.github.io/pages/gallery.html"/>
-  <meta property="og:url" content="https://www.spikysaurus.github.io"/>
   <meta property="og:image:width" content="" />
   <meta property="og:image:height" content=""/>
-  <meta property="og:type" content="website"/>
- </head>
- <body>
+</head>
+<body>
 
-Art by Sadewoo/Spikysaurus , visit my website for more <a href="https://spikysaurus.github.io/pages/gallery.html">https://spikysaurus.github.io/pages/gallery.html</a><br>
-<img id="myImg"></img>
 
-<script>
-
-let imgParams = new URL(document.location.toString()).searchParams;
-let imgName = imgParams.get("img");
-const imageUrl = imgName;
-var img = document.getElementById("myImg")
-img.src = imageUrl;
-
-document.querySelectorAll('meta[property=og\\:image]')[0].setAttribute('content', imageUrl)
-document.querySelectorAll('meta[property=og\\:image\\:width]')[0].setAttribute('content', img.clientWidth)
-document.querySelectorAll('meta[property=og\\:image\\:height]')[0].setAttribute('content', img.clientHeight)
-</script>
 <style>
-#myImg{width:1024px;}
+img{width:50%px;height:75%;}
 body{text-align:center;}
 </style>
 
+
 <script>
-function imgDisplay() {
-var imgurl = document.getElementById('imgUrl').value;
-var encodedParam = encodeURI(imgurl);
-const urlParams = new URLSearchParams(window.location.search);
-urlParams.set('img', encodedParam);
-window.location.search = urlParams;
+let imgParams = new URL(document.location.toString()).searchParams;
+let imgName = imgParams.get("img");
+const imageUrl = imgName;
+
+const arr = [];
+fetch('../assets/json/data.json')
+.then(response => response.json())
+.then(data => {
+    // arr.push("../assets/drawings/arv_HC01.webp","../assets/drawings/arv_HC01.webp");
+    // arr.push(data.B);
+    // arr.push(data.C);
+    for (i in data.A){
+        arr.push(data.A[i]);
+    }
+    for (i in data.B){
+        arr.push(data.B[i]);
+    }
+    for (i in data.C){
+        arr.push(data.C[i]);
+    }
+    displayImages(arr);
+    }
+);
+
+function displayImages(imageUrls) {
+    const container = document.getElementById('display-images');
+    const img = document.createElement('img');
+    img.src = imageUrls[imageUrl];
+    img.alt = '';
+    container.appendChild(img);
+
+    document.querySelectorAll('meta[property=og\\:image]')[0].setAttribute('content', imageUrls[imageUrl])
+    document.querySelectorAll('meta[property=og\\:image\\:width]')[0].setAttribute('content', img.clientWidth)
+    document.querySelectorAll('meta[property=og\\:image\\:height]')[0].setAttribute('content', img.clientHeight)
 }
+
+
 </script>
 
-<p><input id="imgUrl" type="text"/>
-<button onclick="imgDisplay()">Display</button>
+<div id="display-images"></div>
 
  </body>
 
