--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
   <br>
 <div class="tab">
-  <button class="tablinks" onclick="openCity(event, 'Home')" id="defaultOpen">Animation</button>
+  <button class="tablinks" onclick="openCity(event, 'Home')" id="defaultOpen">Home</button>
+  <a href="pages/projects.html"><button>Projects</button></a>
   <a href="pages/gallery.html"><button>Drawings</button></a>
   <a href="pages/links.html"><button>Links</button></a>
   <a href="pages/contact.html"><button>Contact</button></a>
