--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,15 +9,44 @@
 </head>
 
 <body>
-  <div class="tab">
-  <a href="../index.html"><button>BACK TO HOME</button></a>
-  </div>
-
-  <a target="_blank" href="mailto:sade.animation@gmail.com"><h3 class="rainbow rainbow_text_animated"">EMAIL ME!</h3></a>
-  <p style="color:#4a89c3;">ART/ANIMATION COMMISSIONS? WORK AVAILABILITY? TALK ABOUT THE WEBSITE? <br> OR JUST TO SAY HI? ASK ME ANYTHING!</p>
-  <img width="200px" src="../assets/drawings/salam_tai.png">
-
+<div class="htab">
+<a href="../index.html"><button class="hbtn hbtn_off">Home</button></a>
+<a href="projects.html"><button class="hbtn hbtn_off">Projects</button></a>
+<a href="gallery.html"><button class="hbtn hbtn_off">Drawings</button></a>
+<a href="links.html"><button class="hbtn hbtn_off">Links</button></a>
+<a href="contact.html"><button class="hbtn hbtn_on">Contact</button></a>
 </div>
+<div style="float:left;position:absolute;top:0px;">
+<button class="hbtn"><b style="color:white;">SADE</b><b style="color:orange;">WOO</b></button>
+</div>
+
+
+
+  <center>
+  <br><br>
+  <table style="color:#4a89c3;border-spacing:0px;">
+
+    <tr>
+      <td><img src="../assets/drawings/icon.png" style="float:left; border-radius:50%;border:5px solid white;"></img></td>
+
+
+      <td style="z-index:-1;position:relative;left:-50px; text-align:left;vertical-align: middle;background-color:white; padding-left:64px;padding-right:32px;transform: skew(10deg, 0deg);">
+        <div style="transform: skew(-10deg, 0deg);">
+
+          <p style="color:#4a89c3;">ART/ANIMATION COMMISSIONS? <br> WORK AVAILABILITY? COLLAB? <br> TALK ABOUT THE WEBSITE? <br> OR JUST TO SAY HI? ASK ME ANYTHING!</p>
+        </div>
+      </td>
+      <td style="position:relative;left:-50px;background-color:white;vertical-align: middle;transform: skew(10deg, 0deg);padding-left:32px;padding-right:32px;">
+      <div style="transform: skew(-10deg, 0deg);">
+      <a class="text" target="_blank" href="mailto:sade.animation@gmail.com"><h1>EMAIL ME !!</h1></a>
+      </div>
+      </td>
+    </tr>
+
+  </table>
+
+  </center>
+
 
 </body>
 </html> 
