--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -9,8 +9,19 @@
 </head>
 
 <body>
-<div class="tab">
-  <a href="../index.html"><button>BACK TO HOME</button></a><br><br>
+
+<div class="htab">
+<a href="../index.html"><button class="hbtn hbtn_off">Home</button></a>
+<a href="projects.html"><button class="hbtn hbtn_off">Projects</button></a>
+<a href="gallery.html"><button class="hbtn hbtn_on">Drawings</button></a>
+<a href="links.html"><button class="hbtn hbtn_off">Links</button></a>
+<a href="contact.html"><button class="hbtn hbtn_off">Contact</button></a>
+</div>
+<div style="float:left;position:absolute;top:0px;">
+<button class="hbtn"><b style="color:white;">SADE</b><b style="color:orange;">WOO</b></button>
+</div>
+
+<div class="tab" >
   <button style="background-color:orange;" class="tablinks" onclick="openCity(event, 'FanArt')" id="defaultOpen">Fan Art</button>
   <button style="background-color:pink;" class="tablinks" onclick="openCity(event, 'OriginalCharacters')" id="defaultOpen">Original Characters</button>
   <button style="background-color:cyan;" class="tablinks" onclick="openCity(event, 'GIFs')" id="defaultOpen">GIFs</button>
