--- a/pages/links.html
+++ b/pages/links.html
@@ -8,10 +8,24 @@
   <script src="../assets/js/gallery.js"></script>
 </head>
 <body>
+
+<div class="htab">
+<a href="../index.html"><button class="hbtn hbtn_off">Home</button></a>
+<a href="projects.html"><button class="hbtn hbtn_off">Projects</button></a>
+<a href="gallery.html"><button class="hbtn hbtn_off">Drawings</button></a>
+<a href="links.html"><button class="hbtn hbtn_on">Links</button></a>
+<a href="contact.html"><button class="hbtn hbtn_off">Contact</button></a>
+</div>
+<div style="float:left;position:absolute;top:0px;">
+<button class="hbtn"><b style="color:white;">SADE</b><b style="color:orange;">WOO</b></button>
+</div>
+<!--
+
   <div class="tab">
   <a href="../index.html"><button>BACK TO HOME</button></a>
-  </div>
+  </div>-->
   <ul>
+    <li><a href="https://sadewoo.gumroad.com/l/SakugaGP"><img width="500px" src="https://public-files.gumroad.com/lfl5qk6a02wj1crsnkkqvwv32d5l"></a></li>
     <li><a target="_blank" href="https://www.youtube.com/sadewoo0"><img class="sns" src="../assets/blinkies/youtube.gif"></a></li>
     <li><a target="_blank" href="https://sadewoo.newgrounds.com/"><img class="sns" src="../assets/blinkies/newgrounds.gif"></a></li>
     <li><a target="_blank" href="https://bsky.app/profile/spikysaurus.bsky.social"><img class="sns" src="../assets/blinkies/bluesky.gif"></a></li>
@@ -21,8 +35,6 @@
     <li><a target="_blank" href="https://sadewoo.gumroad.com/"><img class="sns" src="../assets/blinkies/gumroad.gif"></a></li>
   </ul>
 
-  <a href="https://sadewoo.gumroad.com/l/SakugaGP"><img width="500px" src="https://public-files.gumroad.com/lfl5qk6a02wj1crsnkkqvwv32d5l"></a>
-  
   <p style="color:#4a89c3;">COLLECTION OF ARTICLES I'M MENTIONED IN!</p>
   <ul>
     
