--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <td style="z-index:-1;position:relative;left:-50px; text-align:left;vertical-align: middle;background-color:white; padding-left:64px;padding-right:32px;transform: skew(10deg, 0deg);">
     <div style="transform: skew(-10deg, 0deg);">
       <b>WELCOME TO MY WEBSITE!</b>
-      <p>I'm Sade! 2D Animator previously worked on Anime,Cartoons and Game PVs <br>
-      Known as <b>Sadewoo</b> in work credits and <b>Spikysaurus</b> from Newgrounds.
+      <p>I'm Sade! Freelace 2D Animator / LO アニメーター previously worked on Anime and Cartoons <br>
+      Known as <b>Sadewoo</b> in the credits and <b>Spikysaurus</b> from Newgrounds.<br>
     </div>
   </td>
   </tr>
