--- a/index.html
+++ b/index.html
@@ -35,8 +35,14 @@
     <td style="z-index:-1;position:relative;left:-50px; text-align:left;vertical-align: middle;background-color:white; padding-left:64px;padding-right:32px;transform: skew(10deg, 0deg);">
     <div style="transform: skew(-10deg, 0deg);">
       <b>WELCOME TO MY WEBSITE!</b>
-      <p>I'm Sade! Freelace 2D Animator / LO アニメーター previously worked on Anime and Cartoons <br>
-      Known as <b>Sadewoo</b> in the credits and <b>Spikysaurus</b> from Newgrounds.<br>
+      <p>I'm Sade (a.k.a <b>Sadewoo</b> / <b>Spikysaurus</b>) a Freelace 2D Animator / LO アニメーター
+      <br>I've previously worked on Japanese Anime and Western Cartoons.
+      <br>Please check my animations below and more art in links above!
+      <br>For inquiries you can contact me at my email <a href="mailto:sade.animation@gmail.com">sade.animation@gmail.com</a>
+      <br>Thankyou for visiting!<br>
+      </p>
+
+
     </div>
   </td>
   </tr>
@@ -45,7 +51,7 @@
 
   <br>
 
-  <a class="text" href="https://youtube.com/playlist?list=PLdk56EjsMhfjwymlCUUltcL63fZDmyZvZ&si=CdKYLRL_zAYk-BXc" > <h1 style>WATCH MY ANIMATION REEL!!</h1></a>
+  <a class="text" href="https://youtube.com/playlist?list=PLdk56EjsMhfjwymlCUUltcL63fZDmyZvZ&si=CdKYLRL_zAYk-BXc" > <h1 style="padding:0px;margin:0px;">CLICK HERE TO WATCH MY ANIMATION REEL!!<br></h1>私のアニメーションリールを見るにはここをクリックしてください</a><br><br>
 
     <div class="card">
         <table width=100%  >
