--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <td style="z-index:-1;position:relative;left:-50px; text-align:left;vertical-align: middle;background-color:white; padding-left:64px;padding-right:32px;transform: skew(10deg, 0deg);">
     <div style="transform: skew(-10deg, 0deg);">
       <b>WELCOME TO MY WEBSITE!</b>
-      <p>I'm Sade (a.k.a <b>Sadewoo</b> / <b>Spikysaurus</b>) a Freelace 2D Animator / LO アニメーター
+      <p>I'm Sade (a.k.a <b>Sadewoo</b> / <b>Spikysaurus</b>)
+      <br>a Freelace 2D Animator / LO アニメーター
       <br>I've previously worked on Japanese Anime and Western Cartoons.
       <br>Please check my animations below and more art in links above!
       <br>For inquiries you can contact me at my email <a href="mailto:sade.animation@gmail.com">sade.animation@gmail.com</a>
