--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div style="transform: skew(-10deg, 0deg);">
       <b>WELCOME TO MY WEBSITE!</b>
       <p>I'm Sade (a.k.a <b>Sadewoo</b> / <b>Spikysaurus</b>)
-      <br>a Freelace 2D Animator / LO アニメーター
+      <br>a Freelance 2D Animator / LO アニメーター
       <br>I've previously worked on Japanese Anime and Western Cartoons.
       <br>Please check my animations below and more art in links above!
       <br>For inquiries you can contact me at my email <a href="mailto:sade.animation@gmail.com">sade.animation@gmail.com</a>
